force-app/main/default/objects/Initiative_Development_Template__c/Initiative_Development_Template__c.object-meta.xml
<CustomObject>
    <description>Partnerships Investment 
Used when partners want to develop new initiatives for investment areas within their Partnerships Investment</description>
    <label>Initiative Development Template</label>
    <nameField>
        <displayFormat>IDT-{000000}</displayFormat>
        <label>Initiative Development Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initiative Development Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>