force-app/main/default/objects/Initiative_Development_Template__c/fields/Amount_of_Investment_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Investment_Year_2__c</fullName>
    <description>How much of your total investment will be allocated to this initiative in Year 2</description>
    <inlineHelpText>How much of your total investment will be allocated to this initiative in Year 2</inlineHelpText>
    <label>Amount of Investment Year 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>