force-app/main/default/objects/Initiative_Development_Template__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <defaultValue>(&quot;2022 - 2024&quot;)</defaultValue>
    <description>Select the financial year that your investment relates to.</description>
    <inlineHelpText>Select the financial year that Sport NZ is investing for.</inlineHelpText>
    <label>Financial Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021 - 2022</fullName>
            </value>
            <value>
                <fullName>2021 - 2024</fullName>
            </value>
            <value>
                <fullName>2022-2024</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>