force-app/main/default/objects/Initiative_Development_Template__c/fields/How_will_you_measure_success_in_Year_1__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_measure_success_in_Year_1__c</fullName>
    <description>What measures will you use to demonstrate you are achieving your outcomes?
This will form your monitoring and evaluation</description>
    <inlineHelpText>What measures will you use to demonstrate you are achieving your outcomes?
This will form your monitoring and evaluation</inlineHelpText>
    <label>How will you measure success in Year 1</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>