force-app/main/default/objects/Initiative_Development_Template__c/fields/Initiative_Name__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Name__c</fullName>
    <description>Enter the name of your Initiative</description>
    <inlineHelpText>Enter the name of your Initiative</inlineHelpText>
    <label>Initiative Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>