force-app/main/default/objects/Initiative_Development_Template__c/fields/Investment_Area__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area__c</fullName>
    <label>Investment Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leadership and Connectivity</fullName>
            </value>
            <value>
                <fullName>Insights and Evaluation</fullName>
            </value>
            <value>
                <fullName>Spaces and Places</fullName>
            </value>
            <value>
                <fullName>Play</fullName>
            </value>
            <value>
                <fullName>Active Recreation</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Physical Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>