force-app/main/default/objects/Initiative_Development_Template__c/fields/Number_of_FTE_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_FTE_Allocated__c</fullName>
    <description>Please enter the number of FTE that will be dedicated to this initiative.  This is for all employees named in the &quot;Who will lead this area?&quot; question.</description>
    <inlineHelpText>Please enter the number of FTE that will be dedicated to this initiative.  This is for all employees named in the &quot;Who will lead this area?&quot; question.</inlineHelpText>
    <label>Number of FTE Allocated</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>