force-app/main/default/objects/Initiative_Development_Template__c/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organisation Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Initiative Development Templates</relationshipLabel>
    <relationshipName>Initiative_Development_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>