force-app/main/default/objects/Initiative_Development_Template__c/fields/Outcome_area__c.field-meta.xml
<CustomField>
    <fullName>Outcome_area__c</fullName>
    <description>Test clone fuction</description>
    <inlineHelpText>does this copy</inlineHelpText>
    <label>Outcome area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>