force-app/main/default/objects/Initiative_Development_Template__c/fields/Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Outcomes__c</fullName>
    <description>Outcomes from the Sport NZ intervention logics</description>
    <inlineHelpText>Select the outcomes you are working towards from the Sport NZ intervention logics</inlineHelpText>
    <label>Outcomes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Investment_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Outcomes</valueSetName>
    </valueSet>
</CustomField>