force-app/main/default/objects/Initiative_Development_Template__c/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiative_Development_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>