force-app/main/default/objects/Initiative_Development_Template__c/fields/Sign_Off_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Approval_Date__c</fullName>
    <description>Enter the date that the Initiative was approved by Investment, Partnerships and Expertise and Capability</description>
    <inlineHelpText>Enter the date that the Initiative was approved by Investment, Partnerships and Expertise and Capability</inlineHelpText>
    <label>Sign-Off Approval Date</label>
    <type>Date</type>
</CustomField>