force-app/main/default/objects/Initiative_Development_Template__c/fields/SME_Approvers__c.field-meta.xml
<CustomField>
    <fullName>SME_Approvers__c</fullName>
    <description>SME&apos;s who have approved this initiative</description>
    <inlineHelpText>Enter your name if you have approved the initiative or a component of the initiative</inlineHelpText>
    <label>SME Approvers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>