force-app/main/default/objects/Initiative_Development_Template__c/fields/SME_Comments__c.field-meta.xml
<CustomField>
    <fullName>SME_Comments__c</fullName>
    <description>Enter your comments on the initiative for the Approval team</description>
    <inlineHelpText>Enter any commentary that the Approval team need to take in to consideration when approving this initiative</inlineHelpText>
    <label>SME Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>