force-app/main/default/objects/Initiative_Development_Template__c/fields/Sport_NZ_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Sport_NZ_Feedback__c</fullName>
    <description>Sport NZ Feedback on the draft initiative.</description>
    <inlineHelpText>The information in this box is Sport NZ&apos;s feedback on your initiative.  Please consider Sport NZ&apos;s feedback as you finalise your initiative.</inlineHelpText>
    <label>Sport NZ Feedback</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>