force-app/main/default/objects/Initiative_Development_Template__c/fields/What_activity_will_you_do_in_Year_1__c.field-meta.xml
<CustomField>
    <fullName>What_activity_will_you_do_in_Year_1__c</fullName>
    <description>What work will your organisation do to achieve the outcomes you have said you will achieve?</description>
    <inlineHelpText>What work will your organisation do to achieve the outcomes you have said you will achieve?</inlineHelpText>
    <label>What activity will you do in Year 1</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>