force-app/main/default/objects/Initiative_Development_Template__c/fields/What_outcomes_will_you_achieve__c.field-meta.xml
<CustomField>
    <fullName>What_outcomes_will_you_achieve__c</fullName>
    <description>Enter the outcomes from the Sport NZ Intervention Logic for this Investment Area</description>
    <inlineHelpText>Enter the outcomes from the Sport NZ Intervention Logic for this Investment Area</inlineHelpText>
    <label>What outcomes will you achieve?</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>