force-app/main/default/objects/Initiative_Development_Template__c/fields/What_Risks_have_been_identified__c.field-meta.xml
<CustomField>
    <fullName>What_Risks_have_been_identified__c</fullName>
    <description>What risks have been identified that may impact you achieving the outcomes you have said you will achieve.</description>
    <inlineHelpText>List all the risks that have been identified that may impact you achieving the outcomes you have said you will achieve.</inlineHelpText>
    <label>What Risks have been identified?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>