force-app/main/default/objects/Initiative_Development_Template__c/fields/Who_will_lead_this_area__c.field-meta.xml
<CustomField>
    <fullName>Who_will_lead_this_area__c</fullName>
    <description>Enter the role and name of the person or people who will be responsible for this initiative</description>
    <inlineHelpText>Enter the role and name of the person who will be responsible for this initiative.  If this is split between more than one person, please provide all names and roles.</inlineHelpText>
    <label>Who will lead this area?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>