force-app/main/default/objects/Initiative_Development_Template__c/validationRules/Owner_Should_Always_Remain_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_Should_Always_Remain_Same</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( OwnerId )</errorConditionFormula>
    <errorMessage>You cannot change owner</errorMessage>
</ValidationRule>