force-app/main/default/objects/Initiative_Development_Template__c/validationRules/OwnerOrganizationShouldBeSame.validationRule-meta.xml
<ValidationRule>
    <fullName>OwnerOrganizationShouldBeSame</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Owner:User.ContactId  &lt;&gt; null, IF(Owner:User.Contact.Account.Id    &lt;&gt;  $Organization.Id,true,false))</errorConditionFormula>
    <errorMessage>IDT and Owner&apos;s organisation is not same.</errorMessage>
</ValidationRule>