force-app/main/default/objects/Initiative_Development_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organisation_Name__c</columns>
    <columns>Investment_Area__c</columns>
    <columns>Initiative_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Amount_of_Investment_Year_1__c</columns>
    <columns>Amount_of_Investment_Year_2__c</columns>
    <columns>Amount_of_Investment_Year_3__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>